--- a/index.html
+++ b/index.html
@@ -2,7 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<style></style>
+	<style>
+	
+		body {
+			background-color: #0d97ff;
+			margin: 0;
+			padding: 0;
+		}
+		
+		#page_container {
+			width: 300px;
+			margin: 150px auto 150px auto;
+			padding: 20px;
+			background-color: #c2e8ff;
+			font-size: 18px;
+			color: #0d97ff;
+		}
+	
+	</style>
 </head>
 <body>
 
