Made nice interface for user. Added style.css

--- a/index.html
+++ b/index.html
@@ -2,30 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<style>
-	
-		body {
-			background-color: #0d97ff;
-			margin: 0;
-			padding: 0;
-		}
-		
-		#page_container {
-			width: 300px;
-			margin: 150px auto 150px auto;
-			padding: 20px;
-			background-color: #c2e8ff;
-			font-size: 18px;
-			color: #0d97ff;
-		}
-	
-	</style>
+	<link href="style.css" rel="stylesheet">
 </head>
 <body>
 
-	<div id="page_container">
+	<main id="page_container">
 	
-	</div>
+	</main>
 
 	<script src="calculation.js"></script>
 </body>
