Modified background image for shopping list

--- a/shopping_list/index.html
+++ b/shopping_list/index.html
@@ -12,8 +12,7 @@
 	  
 	  <input type="text" name="item" id="input_item" placeholder="tutaj wpisz produkt, który chcesz kupić">
 	  
-	  <!-- <button id="id_button_add">DODAJ</button> -->
-	  <input type="submit" id="id_button_add" value="DODAJ">
+	  <button id="id_button_add">DODAJ</button>
 	  
 	  <hr>
 	  
